error banners for cosmetic products

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,9 +57,9 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
 
-            <ul class="govuk-list govuk-list--bullet">
+            <!--ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Test page</a></li>
-            </ul>
+            </ul-->
 
           </li>
 
@@ -89,7 +89,8 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products (0 incomplete, 3 errors example)</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html" target="_blank">Cosmetic products (0 incomplete, 0 errors example).</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html" target="_blank">Cosmetic products (2 incomplete, 0 errors example).</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
           </ul>
         </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a>
