--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html
@@ -110,7 +110,7 @@
 <!-- *************************************** incomplete ends ****************************************************** -->
 
 
-<!-- *************************************** errors starts ****************************************************** -->
+<!-- if there are no errors we do not show any reference to errors...
 <div class="opss-border-top govuk-!-padding-top-3 opss-border-bottom ">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
       Errors (0)
@@ -119,6 +119,7 @@
       There are currently no notification errors.
     </p>
   </div>
+-->
 
 <!-- *************************************** notified starts ****************************************************** -->
       <section role="region" aria-label="Notified products">
