--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html
@@ -38,7 +38,7 @@
 
 <!-- *************************************** incomplete starts ****************************************************** -->
 
-  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4">
+  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4   opss-border-bottom">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
       Incomplete notifications (0)
     </h2>
@@ -49,7 +49,7 @@
 
 <!-- *************************************** incomplete ends ****************************************************** -->
 
-<!-- *************************************** errors starts ****************************************************** -->
+<!-- if there are no errors we do not show any reference to errors...
   <div class="opss-border-top govuk-!-padding-top-3 opss-border-bottom ">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
       Errors (0)
@@ -58,7 +58,7 @@
       There are currently no notification errors.
     </p>
   </div>
-<!-- *************************************** errors ends ****************************************************** -->
+ -->
 
 <!-- *************************************** notified starts ****************************************************** -->
 <section role="region" aria-label="Notified products">
