--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,9 +57,9 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
 
-            <!--ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Test page</a></li>
-            </ul-->
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Products page</a></li>
+            </ul>
 
           </li>
 
