--- a/app/views/nanomaterials-1149/team-members.html
+++ b/app/views/nanomaterials-1149/team-members.html
@@ -108,7 +108,9 @@
         html: '<span class="govuk-!-font-weight-regular">Graham Coals<span class="govuk-visually-hidden">:</span> <br><span class="govuk-!-font-size-16">Awaiting confirmation</span></span>'
       },
       {
-        html: '<a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">gc-office@gmail.co.uk</a> <br><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Graham Coals</span></a>'
+        html: '<a href="mailto:jessicacoalsworth" class="govuk-link govuk-link--no-visited-state">gc-office@gmail.co.uk</a>
+        <span class="govuk-visually-hidden"> | </span><br>
+        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 govuk-!-font-weight-bold">Resend invitation<span class="govuk-visually-hidden"> to Graham Coals</span></a>'
       },
       {
         html: 'Joan Briggs'
