--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -34,7 +34,7 @@
 
                 <div class="govuk-input__wrapper opss-search__wrapper">
                     <input class="govuk-input govuk-!-width-one-half" type="search" id="products-search" name="products-search" aria-describedby="search-hint">
-                    <button class="govuk-button govuk-!-margin-bottom-1" data-module="govuk-button">
+                    <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
                         <span class="govuk-visually-hidden">Search</span>
                     </button>
                 </div>
@@ -62,14 +62,251 @@
             </div>
         </form>
 
-
-
-
-
-
     </div>
 </div>
 
+<div class="govuk-grid-row">
+
+    <section class="govuk-grid-column-one-quarter">
+        <form class="form" action="#" method="post" novalidate>
+            <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset">
+
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                        <h2 class="govuk-fieldset__heading">
+                            Filter the results by<span class="govuk-visually-hidden">:</span>
+                        </h2>
+                    </legend>
+
+                    <div class="govuk-form-group">
+                        <label class="govuk-label" for="category">
+                            Product category
+                        </label>
+                        <select class="govuk-select" id="category" name="category">
+                            <option value="">All</option>
+                            <option value="val01">Option 1</option>
+                            <option value="val02">Option 2</option>
+                            <option value="val03" selected>Option 3</option>
+                            <option value="val04">Option 4</option>
+                        </select>
+                    </div>
+
+                    <div class="govuk-radios govuk-radios--small govuk-radios--conditional" data-module="govuk-radios">
+
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="by-date" name="dates" type="radio" value="by-date" data-aria-controls="conditional-date-block-1" aria-describedby="by-date-hint">
+                            <label class="govuk-label govuk-radios__label" for="by-date">
+                                Date
+                            </label>
+                        </div>
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-block-1">
+                            <div class="govuk-form-group">
+
+                                <div id="by-date-hint" class="govuk-hint govuk-!-font-size-16">
+                                    The date notified. <br>
+                                    For example, 14 08 2019.
+                                </div>
+
+                                <div class="govuk-date-input" id="by-date">
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-day">
+                                        Day
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-day" name="by-date-day" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-month">
+                                        Month
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-month" name="by-date-month" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-year">
+                                        Year
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="by-date-year" name="by-date-year" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="by-date-range" name="dates" type="radio" value="by-date-range" data-aria-controls="conditional-date-block-2" aria-describedby="by-date-range-hint">
+                            <label class="govuk-label govuk-radios__label" for="by-date-range">
+                                Date range
+                            </label>
+                        </div>
+
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-block-2">
+                            <div class="govuk-form-group">
+
+                                <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
+                                    The dates notified within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">30 09 2020</span>.
+                                </div>
+                                <div class="govuk-hint govuk-!-font-size-16">
+                                    From<span class="govuk-visually-hidden">:</span>
+                                </div>
+
+                                <div class="govuk-date-input" id="by-date-from">
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-from-day">
+                                        Day
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-from-day" name="by-date-from-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-from-month">
+                                        Month
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-from-month" name="by-date-from-month" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-from-year">
+                                        Year
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="by-date-from-year" name="by-date-from-year" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                </div>
+                                </div>
+
+                                <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-4 govuk-!-margin-bottom-3">
+                                    To<span class="govuk-visually-hidden">:</span>
+                                </div>
+
+                                <div class="govuk-date-input" id="by-date-to">
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-to-day">
+                                        Day
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-to-day" name="by-date-to-day" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-to-month">
+                                        Month
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-to-month" name="by-date-to-month" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                <div class="govuk-date-input__item">
+                                    <div class="govuk-form-group">
+                                    <label class="govuk-label govuk-date-input__label" for="by-date-to-year">
+                                        Year
+                                    </label>
+                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="by-date-to-year" name="by-date-to-year" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    </div>
+                                </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </fieldset>
+            </div>
+
+            <div class="govuk-button-group">
+                <button type="submit" class="govuk-button" data-module="govuk-button">
+                    Apply
+                </button>
+
+                <button type="reset" class="govuk-button opss-button-link opss-nojs-hide" id="opss-reset" data-module="govuk-button">
+                    Clear filters
+                </button>
+            </div>
+
+        </form>
+    </section>
+
+    <section class="govuk-grid-column-three-quarters">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full" role="region" aria-label="Cases list">
+
+                <table class="govuk-table" style="width: 100%;">
+                    <caption class="govuk-visually-hidden">
+                        Cases data: The table features three columns and each product is described across three rows.
+                    </caption>
+                    <thead class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                            <th id="al-01" scope="col" class="govuk-table__header govuk-!-width-one-quarter">Allegation</th>
+                            <th id="ca-01" scope="col" class="govuk-table__header govuk-!-width-one-half">Case owner</th>
+                            <th id="up-01" scope="col" class="govuk-table__header govuk-!-width-one-quarter">Updated</th>
+                        </tr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row">
+                            <th id="prod-01" colspan="3" scope="colgroup" class="govuk-table__header">
+                                This is the long product name
+                            </th>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <td headers="prod-01 al-01" class="govuk-table__cell">
+                                2021-11
+                            </td>
+                            <td headers="prod-01 ca-01" class="govuk-table__cell">
+                                David Willis
+                            </td>
+                            <td headers="prod-01 up-01" class="govuk-table__cell">
+                                about 6 hours ago
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="prod-01" id="status-01" scope="row" class="govuk-table__header">
+                                <span class="govuk-visually-hidden">Status</span>
+                            </th>
+                            <td headers="prod-01 status-01" colspan="3" class="govuk-table__cell">
+                                <span>Serious risk case</span> <span>Restricted case</span>
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th id="prod-02" colspan="3" scope="colgroup" class="govuk-table__header">
+                                And another product title here
+                            </th>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <td headers="prod-02 al-02" class="govuk-table__cell">
+                                20-2120
+                            </td>
+                            <td headers="prod-02 ca-02" class="govuk-table__cell">
+                                Gavin Williamson
+                            </td>
+                            <td headers="prod-02 up-02" class="govuk-table__cell">
+                                15 days ago
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="prod-02" id="status-02" scope="row" class="govuk-table__header">
+                                <span class="govuk-visually-hidden">Status</span>
+                            </th>
+                            <td headers="prod-02 status-02" colspan="2" class="govuk-table__cell">
+                                <span>High risk case</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tfoot class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Allegation</th>
+                            <th scope="col" class="govuk-table__header govuk-!-width-one-half">Case owner</th>
+                            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Updated</th>
+                        </tr>
+                    </tfoot>
+                </table>
+
+            </div>
+        </div>
+    </section>
+
+</div>
 
 {% endblock %}
-
