--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01-refresh.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01-refresh.html
@@ -21,7 +21,7 @@
         </div>
         <div class="govuk-notification-banner__content">
           <p class="govuk-notification-banner__heading">
-            There are 3 notification errors. <a class="govuk-notification-banner__link" href="#accordion-errors-heading-1">View errors</a>.
+            There are 3 notification errors. <a class="govuk-notification-banner__link" href="#accordion-opss-heading-1">View errors</a>.
           </p>
           <p class="govuk-body">You may need to <a href="#" class="govuk-notification-banner__link">refresh</a> this page to view the latest errors or incomplete notifications.</p>
         </div>
@@ -55,19 +55,6 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
-<!-- *************************************** incomplete starts ****************************************************** -->
-
-  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
-      Incomplete notifications (0)
-    </h2>
-    <p class="govuk-body">
-      There are currently no incomplete notifications.
-    </p>
-  </div>
-
-<!-- *************************************** incomplete ends ****************************************************** -->
 
 <!-- *************************************** errors starts ****************************************************** -->
 {% set errorsTblHTML %}
@@ -144,7 +131,7 @@
 {% endset -%}
 
 {{ govukAccordion({
-  id: "accordion-errors",
+  id: "accordion-opss",
   classes: "opss-accordian__open-remove govuk-!-margin-bottom-0",
   items: [
     {
@@ -161,6 +148,19 @@
   ]
 }) }}
 <!-- *************************************** errors ends ****************************************************** -->
+
+<!-- *************************************** incomplete starts ****************************************************** -->
+
+  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4 opss-border-bottom">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
+      Incomplete notifications (0)
+    </h2>
+    <p class="govuk-body">
+      There are currently no incomplete notifications.
+    </p>
+  </div>
+
+<!-- *************************************** incomplete ends ****************************************************** -->
 
 <!-- *************************************** notified starts ****************************************************** -->
     <section role="region" aria-label="Notified products">
