--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
@@ -20,7 +20,7 @@
         </div>
         <div class="govuk-notification-banner__content">
           <p class="govuk-notification-banner__heading">
-            There are 3 notification errors. <a class="govuk-notification-banner__link" href="#accordion-errors-heading-2">View errors</a>.
+            There are 3 notification errors. <a class="govuk-notification-banner__link" href="#accordion-opss-heading-1">View errors</a>.
           </p>
         </div>
       </div>
@@ -183,20 +183,9 @@
 <!-- accordian errors only shown if there are errors - ends -->
 
 {{ govukAccordion({
-  id: "accordion-errors",
+  id: "accordion-opss",
   classes: "opss-accordian__open-remove govuk-!-margin-bottom-0",
   items: [
-    {
-      heading: {
-        text: "Incomplete notifications (2)"
-      },
-      summary: {
-        html: '<p class="govuk-body govuk-!-margin-bottom-1">There are currently 2 incomplete notifications.</p>'
-      },
-      content: {
-        html: incompleteTblHTML
-      }
-    },
     {
       heading: {
         text: "Errors (3)"
@@ -206,6 +195,17 @@
       },
       content: {
         html: errorsTblHTML
+      }
+    },
+    {
+      heading: {
+        text: "Incomplete notifications (2)"
+      },
+      summary: {
+        html: '<p class="govuk-body govuk-!-margin-bottom-1">There are currently 2 incomplete notifications.</p>'
+      },
+      content: {
+        html: incompleteTblHTML
       }
     }
   ]
