--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01-refresh.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01-refresh.html
@@ -151,7 +151,7 @@
 
 <!-- *************************************** incomplete starts ****************************************************** -->
 
-  <div class="opss-border-top govuk-!-padding-top-3 govuk-!-margin-bottom-4 opss-border-bottom">
+  <div class="opss-border-top govuk-!-padding-top-3 opss-border-bottom">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-2">
       Incomplete notifications (0)
     </h2>
