--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,6 +58,7 @@
           </ul-->
 
             <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html">Cases page</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Products page</a></li>
             </ul>
 
