--- a/app/views/nanomaterials-1149/nanomaterials.html
+++ b/app/views/nanomaterials-1149/nanomaterials.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 
-<div class="govuk-grid-row govuk-!-margin-top-4">
-    <div class="govuk-grid-column-full">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-margin-top-4">
 
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
