new states of add products pages

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -16,6 +16,13 @@
     line-height: $l !important;
 }
 
+main.govuk-main-wrapper {
+    @include govuk-media-query($from: desktop) {
+        min-height: 500px;
+    }
+    @include govuk-clearfix;
+}
+
 .opss-nojs-hide {
     display: none;
 }
