--- a/app/views/index.html
+++ b/app/views/index.html
@@ -59,7 +59,12 @@
 
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html">Cases page</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Products page</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html">Products page</a>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-results.html">Products page - after search</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-new.html">Products page - new product</a></li>
+                </ul>
+              </li>
             </ul>
 
           </li>
