--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -162,6 +162,38 @@ ul.opss-radio-list {
       background-color: govuk-colour("light-grey");
     }*/
 
+    &.opss-table-items--new-item {/* the new product having been added - top tbody */
+        tbody:first-of-type {
+            border: 3px solid $govuk-success-colour;
+
+            tr:first-child {
+                th {
+                    color: $govuk-success-colour;
+                    padding-left: govuk-spacing(2);
+                    padding-top: govuk-spacing(3);
+                }
+            }
+            tr:first-child + tr {
+                th + th {
+                   padding-left: govuk-spacing(2);
+                }
+            }
+            tr {
+                td:first-of-type {
+                    padding-left: govuk-spacing(2);
+                }
+                td:last-of-type {
+                    padding-right: govuk-spacing(2);
+                }
+            }
+
+            & + tbody th {/* the tbody following the new item tbody */
+                padding-top: govuk-spacing(4);
+            }
+        }
+
+    }
+
 }
 
 .opss-tag {
