--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds govuk-!-margin-top-8"> <!-- govuk-grid-column-three-quarters govuk-!-margin-bottom-7 -->
+    <div class="govuk-grid-column-two-thirds"> <!-- govuk-grid-column-three-quarters govuk-!-margin-bottom-7 -->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Products
         </h1>
@@ -378,7 +378,7 @@
 
                 <table id="table-items" class="govuk-table opss-table-items">
                     <caption class="govuk-visually-hidden">
-                        Cases data: The table features three columns and each product is described across three corresponding rows within one table body.
+                        Cases data: The table features three columns and each product is described across corresponding rows within one table body.
                     </caption>
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
