--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -164,16 +164,17 @@ ul.opss-radio-list {
 
     &.opss-table-items--new-item {/* the new product having been added - top tbody */
         tbody:first-of-type {
-            border: 3px solid $govuk-success-colour;
+            border-top: 3px solid $govuk-success-colour;
+            border-bottom: 3px solid $govuk-success-colour;
 
             tr:first-child {
                 th {
                     color: $govuk-success-colour;
-                    padding-left: govuk-spacing(2);
+                    /*padding-left: govuk-spacing(2);*/
                     padding-top: govuk-spacing(3);
                 }
             }
-            tr:first-child + tr {
+            /*tr:first-child + tr {
                 th + th {
                    padding-left: govuk-spacing(2);
                 }
@@ -187,9 +188,9 @@ ul.opss-radio-list {
                 }
             }
 
-            & + tbody th {/* the tbody following the new item tbody */
+            & + tbody th {
                 padding-top: govuk-spacing(4);
-            }
+            }*/
         }
 
     }
